# pypto

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.claude/agents/code-review/: AGENT.md
.claude/rules/: core-development.md  pass-complexity.md  pass-doc-ordering.md  python-style.md
.claude/skills/address-pr-comments/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/compare-codegen/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.github/docker/: github_ci.Dockerfile
.github/workflows/: build_github_image.yml  ci.yml  daily_ci.yml
docs/dev/: 06-operator_organization.md  07-ir_parser.md  07-python_syntax.md  09-ir_parser.md  12-pto_codegen.md
docs/dev/ir/: 01-hierarchy.md
docs/dev/passes/: 06-insert_sync.md
docs/en/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md  03-torch_codegen_debug.md
docs/zh-cn/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md  03-torch_codegen_debug.md
examples/: __init__.py
examples/ir_builder/: block_ops_example.py  flash_attention_builder.py  program_builder_example.py  sinh_taylor_codegen.py
examples/ir_parser/: dynamic_paged_attention_example.py  error_renderer.py  flash_attention_parsing.py  orchestration_example.py  paged_attention_example.py  paged_attention_multi_config_example.py  paged_attention_tensor.py  paged_attention_with_incore.py  parse_from_text.py  program_example.py  vector_example_dag.py
examples/kernels/: 09_dyn_valid_shape.py  __init__.py
examples/language/beginner/: basic_ops.py  elementwise.py  hello_world.py  matmul.py
examples/language/llm_models/: llama_7b_mini.py
include/pypto/core/: common.h  dtype.h  error.h
include/pypto/ir/: builder.h  core.h  core_affinity_kind.h  expr.h  function.h  kind_traits.h  memref.h  op_registry.h  pipe.h  scalar_expr.h  stmt.h  type.h  type_inference.h
python/bindings/: CMakeLists.txt  bindings.cpp  module.h
python/bindings/modules/: codegen.cpp  core.cpp  error.cpp  ir.cpp  ir_builder.cpp  logging.cpp  pass.cpp  passes.cpp  testing.cpp
python/pybind/: CMakeLists.txt  bindings.h  pybind.cpp
python/pybind/modules/: error.cpp  ir.cpp  testing.cpp
python/pypto/: __init__.py  pypto_core.pyi
python/pypto/backend/: pto_backend.py
python/pypto/debug/: torch_codegen.py
python/pypto/ir/: __init__.py  builder.py  compile.py  instruments.py  pass_manager.py  printer.py  pto_codegen.py  type.py  utils.py
python/pypto/language/: __init__.py  dsl_api.py  scalar.py  tensor.py  tile.py
python/pypto/pypto_core/: __init__.pyi  codegen.pyi  ir.pyi  passes.pyi  testing.pyi
python/pypto/runtime/: __init__.py  golden_writer.py  runner.py  tensor_spec.py
reference/pto-isa/: addc-pto-ir.mlir  adds-pto-ir.mlir  mul-pto-ir.mlir
src/backend/910B_CCE/: backend_910b_cce_ops.cpp
src/backend/910B_PTO/: backend_910b_pto_ops.cpp
src/backend/common/: backend.cpp  pto_ops_common.cpp
src/codegen/: codegen_base.cpp  tensor_op_codegen.cpp
src/codegen/cce/: cce_codegen.cpp  code_context.cpp  code_emitter.cpp  code_generator.cpp  isa_mapper.cpp  type_converter.cpp
src/codegen/distributed/: distributed_codegen.cpp
src/codegen/orchestration/: orchestration_codegen.cpp
src/codegen/pto/: pto_codegen.cpp  pto_control_flow_codegen.cpp  pto_scalar_expr_codegen.cpp  pto_type_utils.cpp  tpop_chain_reorder.cpp
src/core/: backtrace.cpp
src/ir/: builder.cpp  function.cpp  memref.cpp  op_registry.cpp  type.cpp
src/ir/arith/: analyzer.cpp  const_int_bound.cpp  ir_mutator_with_analyzer.cpp
src/ir/reporter/: memory_report_generator.cpp
src/ir/serialization/: deserializer.cpp  serializer.cpp  type_deserializers.cpp
src/ir/transform/: insert_sync_pass.cpp  mutator.cpp  pass.cpp  printer.cpp  python_printer.cpp  structural_equal.cpp  structural_hash.cpp  visitor.cpp
src/ir/transforms/: allocate_memory_addr_pass.cpp  basic_memory_reuse_pass.cpp  convert_tensor_to_block_ops_pass.cpp  convert_tensor_to_tile_ops_pass.cpp  convert_to_ssa_pass.cpp  ctrl_flow_transform_pass.cpp  dependency_analyzer.cpp  expand_mixed_kernel_pass.cpp  flatten_call_expr_pass.cpp  flatten_tile_nd_to_2d_pass.cpp  fuse_create_assemble_to_slice_pass.cpp  infer_tile_memory_space_pass.cpp  init_memref.cpp  inject_gm_pipe_buffer_pass.cpp  insert_sync_pass.cpp  interchange_chunk_loops_pass.cpp  ir_property.cpp  legalize_pto_buffer_reuse_pass.cpp  (+19 more)
tests/lint/: clang_tidy.py
tests/st/: conftest.py
tests/ut/: conftest.py
(+296 files in other folders)
